<resources>
    <string name="app_name">MiApp</string>
    <string name="msgUsuario">Digite Usuario</string>
    <string name="recuperarclave">Cambiar Clave</string>
    <string name="olvidoclave">"¿Olvidó su clave?"</string>
    <string name="crearaqui">Crear Aqui</string>
    <string name="notieneusu">"¿No tiene cuenta?"</string>
    <string name="iniciar">Iniciar Sesión</string>
    <string name="msgContraseña">Digite Contraseña</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_productos">Productos</string>
    <string name="text_mistiendas">Mis Tiendas</string>
    <string name="text_tiendas">Tiendas</string>
</resources>
